half processor