@@ -35,7 +35,7 @@
         <log4j2.version>2.8.2</log4j2.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <jackson.version>2.10.1</jackson.version>
-        <lombok.version>1.18.8</lombok.version>
+        <lombok.version>1.18.14</lombok.version>
         <validation.api.version>2.0.1.Final</validation.api.version>
         <netty.version>4.1.41.Final</netty.version>
     </properties>
@@ -209,6 +209,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
